# PotatorsTower

./: README.md  docker-compose.yml
ClientHandlerService/: Dockerfile  app.py  requirements.txt
ClientHandlerService/templates/: about.html  add.html  base.html  change_password.html  index.html  login.html  new_login.html  profile.html  register.html  subs.html  table.html  user_profile.html
NotifierService/: Dockerfile  bot.py  requirements.txt
SpectatorService/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
SpectatorService/proto/: api.proto
SpectatorService/src/: ConnectionPool.cpp  ConnectionPool.h  ConsoleManager.cpp  ConsoleManager.h  Controller.cpp  Controller.h  DatabaseControll.cpp  DatabaseControll.h  DateClass.cpp  DateClass.h  DomainAdder.h  DownServersNotifier.cpp  DownServersNotifier.h  Logger.h  MediaLoadTimer.h  Messenger.cpp  Messenger.h  NewAddressesParser.h  PingDomains.cpp  PingDomains.h  Pinger.cpp  Pinger.h  SQLManager.h  ThreadSafeQueue.h  a.cpp  ca-bundle.crt  main.cpp
init-database/: 01-create-tables.sql  02-insert-servers.sql
